# calendula

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  SECURITY.md  build.rs  config.sample.toml  flake.nix  install.sh  package.nix  shell.nix
.github/workflows/: release-on-demand.yml  releases.yml
src/: backend.rs  cli.rs  client.rs  config.rs  contact.rs  lib.rs  main.rs  table.rs  wizard.rs
src/account/: account.rs  check.rs  cli.rs  configure.rs  context.rs  de.rs  list.rs  mod.rs
src/caldav/: cli.rs  client.rs  config.rs  create.rs  delete.rs  discover.rs  list.rs  mod.rs
src/calendar/: mod.rs  table.rs
src/calendar/command/: create.rs  delete.rs  list.rs  mod.rs  update.rs
src/event/: mod.rs  table.rs
src/event/command/: agenda.rs  create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
src/item/: table.rs
src/item/command/: create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
src/shared/: arg.rs  client.rs  ical.rs  mod.rs
src/shared/calendars/: cli.rs  create.rs  delete.rs  list.rs  update.rs
src/shared/events/: agenda.rs  cli.rs  create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
src/shared/items/: cli.rs  create.rs  delete.rs  list.rs  mod.rs  read.rs  update.rs
src/vdir/: cli.rs  client.rs  config.rs  create.rs  delete.rs  list.rs  mod.rs  rename.rs
src/wizard/: discover.rs  edit.rs
